Bug 398847 - Kaddressbook not parsing gmail contacts
Summary: Kaddressbook not parsing gmail contacts
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.9.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 400415 404438 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-09-19 20:32 UTC by Dirk Tombaugh
Modified: 2019-07-16 20:50 UTC (History)
23 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dirk Tombaugh 2018-09-19 20:32:16 UTC
I have searched around and haven't found anything about this. So posting here to report as possible bug. Or maybe someone else has run into this and knows what is going on. I'm running Kaddressbook 5.9.1 (App version 18.08). Kontact and Kmail are the same versions.

My contacts are showing this in the email fields:


Contact Name <//schemas.google.com/g/2005#home:#########@gmail.com>
 

If I edit the contact, it will just revert the next time it syncs. I've tried removing the addressbook and re-adding, clearing the Akonadi cache, I've tried akonadictl fsck. Nothing seems to change the contact display.

When I open kaddressbook through CLI, the only error I get is this:
QIODevice::read (QLocalSocket): device not open
Comment 1 Axel Braun 2018-09-30 08:25:41 UTC
I can confirm the problem. It's not possible to send mails to contacts coming from google (App 18.08.01) due to this schemas-stuff
Comment 2 johan.claudebreuninger 2018-10-03 17:29:33 UTC
I can confirm this bug on various different computers too.

All running Version 5.9.1 and software 18.08.1
Comment 3 Jacopo Torrini 2018-10-10 11:09:27 UTC
I confirm this bug for me.

KAddressBook 5.9.1
KDE 5.14.0
KDE Frameworks 5.50.0
Qt 5.11.1
Comment 4 Axel Braun 2018-10-21 12:43:58 UTC
I had just opened a slightly different problem some days ago - https://bugs.kde.org/show_bug.cgi?id=400033 
not sure if they may be related
Comment 5 Cristiano Rodrigues 2018-10-25 10:23:40 UTC
Same here.
All emails have this "//schemas.google.com/g/2005#other:" before the real email.
I'm using a Gsuite account.

Package: kaddressbook
Priority: optional
Section: utils
Installed-Size: 757
Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
Architecture: amd64
Version: 4:18.08.0+p18.10+git20181025.0104-0
Comment 6 Facundo Aguilera 2018-10-30 17:46:02 UTC
Hi,
I'm having the same problem using last Debian Testing...
Comment 7 Tim Folger 2018-10-30 18:28:24 UTC
Same problem here running opensuse tumbleweed 5.14.2, kontact version 5.9.2. I have the same issue on another computer running debian unstable.
Comment 8 Shawn Sörbom 2018-10-31 18:22:23 UTC
Same issue on KDE Neon 5.14.2
Comment 9 genista 2018-11-06 09:35:24 UTC
Same issue with Version 5.9.2 on Manjaro Linux.

Kernel: 4.19.0-4-MANJARO x86_64 bits: 64 compiler: gcc v: 8.2.1 Desktop: KDE Plasma 5.14.2 
tk: Qt 5.11.2 info: latte-dock wm: kwin_x11 dm: SDDM Distro: Manjaro Linux
Comment 10 Nicola Jelmorini 2018-11-16 13:33:17 UTC
I can confirm the issue too.

My system:
- KDE Neon
- Plasma: 5.14.3
- KDE Frameworks: 5.52.0
- Qt: 5.11.2
- Kernel: 4.15.0.39
- KAdressBook: 4:18.08.3-0xneon+18.04+bionic+build20
Comment 11 pedaliero 2018-11-23 10:40:16 UTC
I can confirm the issue too.

Kontact Version 5.9.3

email adresses look like : <//schemas.google.com/g/2005#home:#########@gmail.com>

all google contacts are double or triple available
Comment 12 Kishore Gopalakrishnan 2018-12-20 07:30:54 UTC
*** Bug 400415 has been marked as a duplicate of this bug. ***
Comment 13 revjdc 2019-01-27 14:16:40 UTC
Confirmed here

Fedora 29
Kontact 5.9.3
KDE Workspaces 5.53.0
Comment 14 Colin J Thomson 2019-02-24 19:56:25 UTC
*** Bug 404438 has been marked as a duplicate of this bug. ***
Comment 15 Daniel Vrátil 2019-02-24 21:41:24 UTC
Git commit 2a85825b3a15a6d87fd9d79a61af31927d716641 by Daniel Vrátil.
Committed on 24/02/2019 at 21:40.
Pushed by dvratil into branch 'Applications/18.12'.

Contacts: fix email type deserialization
FIXED-IN: 5.10.3

M  +14   -0    src/contacts/contact.cpp
M  +5    -0    src/contacts/contact.h
M  +4    -2    src/contacts/contactsservice.cpp

https://commits.kde.org/libkgapi/2a85825b3a15a6d87fd9d79a61af31927d716641
Comment 16 piedro 2019-03-08 04:23:08 UTC
I am using Arch with the latest 18.12.3 version. The problem is still there. 

Or I am missing something...
Comment 17 Philippe ROUBACH 2019-03-08 04:51:41 UTC
no more problem for me

libkpimgapicontacts5 18.12.2
libkpimgapicore5 18.12.2

with update

lun. 25 févr. 2019 13:00:00 CET

- Add Contacts-fix-email-type-deserialization.patch to fix broken
  email fields in google contacts (boo#1126614, kde#398847)
- Use < %{version} again for obsoleting sasl2-kdexoauth2-3
Comment 18 piedro 2019-03-08 05:07:39 UTC
Do you have to recreate the addressbooks to fix the data? 

Or does the patch make akonadi fix the email fields in the contact database?
Comment 19 Philippe ROUBACH 2019-03-08 05:10:12 UTC
(In reply to piedro from comment #18)
> Do you have to recreate the addressbooks to fix the data? 
> 
> Or does the patch make akonadi fix the email fields in the contact database?

i did nothing. Perhaps the sync mechanism fixed problem.
Comment 20 Dirk Tombaugh 2019-03-08 17:35:09 UTC
It works for me now. I had to delete the address book and then re-add it.
Comment 21 genista 2019-03-08 17:55:47 UTC
(In reply to Dirk Tombaugh from comment #20)
> It works for me now. I had to delete the address book and then re-add it.

I tried this but nothing changed. 

The Bug is not solved.

Manjaro Stable 

KDEpim  18.12.2-1
Comment 22 Dirk Tombaugh 2019-03-08 18:01:41 UTC
make sure these packages are updated:
libkpimgapicontacts5 18.12.2
libkpimgapicore5 18.12.2

You might have to restart akonadi as well:
akonadictl restart
Comment 23 Tim Folger 2019-03-08 18:06:20 UTC
Deleting my address book and re-adding it worked for me too. (I rebooted after deleting the address book, and before re-adding it.)
I'm running opensuse tumbleweed, plasma 5.15.2, frameworks 5.55.0, Qt version 5.12.0
Comment 24 Axel Braun 2019-03-08 19:04:43 UTC
(In reply to Tim Folger from comment #23)
> Deleting my address book and re-adding it worked for me too. (I rebooted
> after deleting the address book, and before re-adding it.)
> I'm running opensuse tumbleweed, plasma 5.15.2, frameworks 5.55.0, Qt
> version 5.12.0

I can confirm this for tumbleweed. Wolfgang applied the patch in advance!
Comment 25 Michael D 2019-03-08 19:26:35 UTC
Seems not to be fixed on Manjaro. I removed and re-added my address book but it didn't work. Both of the packages that Dirk mentioned don't exist in the manjaro repos, nor packages with a similar name even.
Comment 26 Wolfgang Bauer 2019-03-08 19:37:32 UTC
(In reply to genista from comment #21)
> The Bug is not solved.
> 
> Manjaro Stable 
> 
> KDEpim  18.12.2-1

The fix is in 18.12.3, unless your distribution backported it.
Comment 27 genista 2019-03-12 09:40:43 UTC
(In reply to Wolfgang Bauer from comment #26)
> (In reply to genista from comment #21)
> > The Bug is not solved.
> > 
> > Manjaro Stable 
> > 
> > KDEpim  18.12.2-1
> 
> The fix is in 18.12.3, unless your distribution backported it.

After Manjaro Update from Today, deleting Account and re-adding the Problem is solved for me. 

Regards genista
Comment 28 Martin Tlustos 2019-03-13 06:27:17 UTC
Before I delete and re-add the account to kaddressbook: shouldn't a proper fix work without this? If that is the goal, then I should wait to test whether it works then, right?
Comment 29 Philippe ROUBACH 2019-03-13 08:37:25 UTC
many problems were fixed with recent patches about gapi core and gapi contacts by just updating and restarting PC.

the 2 recents patches fixed many problems but not all see 
https://bugs.kde.org/show_bug.cgi?id=405167

https://bugs.kde.org/show_bug.cgi?id=404691


these 2 recents patches (you can see them if your software management tool list them) :

sam. 09 mars 2019 13:00:00 CET
lbeltrame@kde.org
- Update to 18.12.3
  * New bugfix release
  * For more details please see:
  * https://www.kde.org/announcements/announce-applications-18.12.3.php
- Changes since 18.12.2:
  * Fix googletalk protocol.
  * Contacts: fix email type deserialization (kde#398847)
- Dropped patches, now upstream:
  * Contacts-fix-email-type-deserialization.patch

lun. 25 févr. 2019 13:00:00 CET
wbauer@tmo.at
- Add Contacts-fix-email-type-deserialization.patch to fix broken
  email fields in google contacts (boo#1126614, kde#398847)
- Use < %{version} again for obsoleting sasl2-kdexoauth2-3
Comment 30 Axel Braun 2019-04-01 07:15:17 UTC
(In reply to Martin Tlustos from comment #28)
> Before I delete and re-add the account to kaddressbook: shouldn't a proper
> fix work without this? If that is the goal, then I should wait to test
> whether it works then, right?

Make sure to check your distribution lists afterwards - mine got corrupted by removing/re-adding google contacts
Comment 31 Boyd Stephen Smith Jr. 2019-05-12 16:40:44 UTC
This is still affecting me in kaddresbook 18.08.3 from Debian.

I have no idea how to convert from the 5.10.3 "fixed version" to the version used by KDE application releases 18.08.3.  From what I could glean, 5.10.3 was released a year or so before 18.08.3, but the bug persists.
Comment 32 Kishore Gopalakrishnan 2019-05-13 03:41:44 UTC
(In reply to Boyd Stephen Smith Jr. from comment #31)
> This is still affecting me in kaddresbook 18.08.3 from Debian.
> 
> I have no idea how to convert from the 5.10.3 "fixed version" to the version
> used by KDE application releases 18.08.3.  From what I could glean, 5.10.3
> was released a year or so before 18.08.3, but the bug persists.

Comment #26 says the fix is in 18.12.3. Please ask the Debain maintainer to backport the fix.