Contacts: fix email type deserialization

BUG: 398847
FIXED-IN: 5.10.3